--- a/published/book/MongoDB实用设计模式/index.mdx
+++ b/published/book/MongoDB实用设计模式/index.mdx
@@ -9,6 +9,6 @@ import { Link } from "gatsby"
 
 <ul>
   <li>
-    <Link to="MongoDB实用设计模式/第1章/">第 1 章 嵌入还是引用</Link>
+    <Link to="MongoDB实用设计模式/第1章/">第 1 章 - 嵌入还是引用</Link>
   </li>
 </ul>
