--- a/published/book/分布式NodeJS/index.mdx
+++ b/published/book/分布式NodeJS/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "分布式NodeJS"
+title: "分布式 NodeJS"
 subtitle: "构建企业级后端服务"
 isbn: "978-1-492-07729-9"
 cover: "./cover.jpg"
@@ -9,12 +9,12 @@ import { Link } from "gatsby"
 
 <ul>
   <li>
-    <Link to="分布式NodeJS/第1章/">第 1 章 为何选用分布式</Link>
+    <Link to="分布式NodeJS/第1章/">第 1 章 - 为何选用分布式</Link>
   </li>
   <li>
-    <Link to="分布式NodeJS/第2章/">第 2 章 协议</Link>
+    <Link to="分布式NodeJS/第2章/">第 2 章 - 协议</Link>
   </li>
   <li>
-    <Link to="分布式NodeJS/第3章/">第 3 章 扩展</Link>
+    <Link to="分布式NodeJS/第3章/">第 3 章 - 扩展</Link>
   </li>
 </ul>
