--- a/published/book/分布式NodeJS/第2章/index.mdx
+++ b/published/book/分布式NodeJS/第2章/index.mdx
@@ -4,3 +4,9 @@ title: "协议"
 isbn: "978-1-492-07729-9"
 chapter: 2
 ---
+
+import { Link } from "gatsby"
+
+## title
+
+通往另一篇文章的<Link to="../第1章#事件循环阶段">链接</Link>。
